2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix crash when casting an invalid
	  expression, fixes bug 514331

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valastruct.vala: improve error reporting
	  for methods missing the return type, fixes bug 514344

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix error message for invalid
	  symbols, fixes bug 514329

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala: improve error reporting for properties,
	  fixes bug 514326

	* tests/classes-properties.vala: fix test case

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala: don't use construction properties
	  for classes not deriving from GObject, fixes bug 514323

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala, vala/valadelegatetype.vala,
	  gobject/valaccodeassignmentbinding.vala: don't crash when using
	  delegate properties, fixes bug 514261

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsourcefile.vala: don't write C file in
	  case of errors, fixes bug 514259

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterface.vala, vala/valastruct.vala,
	  gobject/valaccodegeneratormethod.vala: don't generate result
	  variable when not using postconditions to avoid unnecessary name
	  conflicts with method parameters

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: fix .vapi location without -d option

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: add missing
	  visit_expression call for assignments, fixes bug 514255

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/json-glib-1.0.vapi,
	  vapi/packages/json-glib-1.0/: add JSON-GLib bindings,
	  patch by Ali Sabil

2008-02-03  Jürg Billeter  <j@bitron.ch>
